--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
-GITHUB_TOKEN=github_personal_access_token
-COLLECTION_PATH=events_collection.json
+SLACK_OAUTH_TOKEN=xoxb-xxxxxxxxxxx-xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx
+SLACK_CHANNEL_ID=xxxxxxxxxxx
+COLLECTION_PATH=stats-data
 REPO=AdguardTeam/AdguardFilters
-SINCE=2022-05-01T00:00:00Z
+UNTIL=2022-11-22T21:00:00Z
+SINCE=2022-11-21T21:00:00Z
