--- a/.github/workflows/poll-events-manual.yaml
+++ b/.github/workflows/poll-events-manual.yaml
@@ -25,3 +25,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: Events collection update
+          default_author: github_actions
