--- a/.github/workflows/poll-events.yaml
+++ b/.github/workflows/poll-events.yaml
@@ -27,3 +27,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: Events collection update
+          default_author: github_actions
